
0.9.8 (Feb 2011)
----------------

Restructured. Moved DAV package to pywebdav.lib. All integrators must simply replace
''from DAV'' imports to ''from pywebdav.lib''.
[Simon Pamies]

0.9.4 (April 15 2010)
---------------------
  
Add somme configuration setting variable to enable/disable iterator and chunk support
[Stephane Klein]

Removed os.system calls thus fixing issue 32
[Simon Pamies]

Fixed issue 14
[Simon Pamies]

Removed magic.py module - replaced with mimetypes module
[Simon Pamies]

Print User-Agent information in log request.
[Stephane Klein]

Fix issue 13 : return http 1.0 compatible response (not chunked) when request http version is 1.0
[cliff.wells]

Enhance logging mechanism
[Stephane Klein]

Fix issue 15 : I've error when I execute PUT action with Apple Finder client
[Stephane Klein]

Fix issue 14 : config.ini boolean parameter reading issue
[Stephane Klein]

0.9.3 (July 2 2009)
-------------------

Setting WebDAV v2 as default because LOCK and UNLOCK seem
to be stable by now. -J parameter is ignored and will go away.
[Simon Pamies]

Fix for PROPFIND to return *all* properties
[Cedric Krier]

Fixed do_PUT initialisation
[Cedric Krier]

Added REPORT support
[Cedric Krier]

Added support for gzip encoding
[Cedric Krier]

Fix for wrong --port option
[Martin Wendt]

Handle paths correctly for Windows related env
[Martin Wendt]

Included mimetype check for files
based on magic.py from Jason Petrone. Included
magic.py into this package. All magic.py code
(c) 2000 Jason Petrone. Included from
http://www.jsnp.net/code/magic.py.
[Joerg Friedrich, Simon Pamies]

Status check not working when server is running
[Joerg Friedrich]

Fixed wrong time formatting for Last-Modified
and creationdate (must follow RFC 822 and 3339)
[Cedric Krier]

0.9.2 (May 11 2009)
-------------------

Fixed COPY, MOVE, DELETE to support locked
resources
[Simon Pamies]

Fixed PROPFIND to return 404 for non existing
objects and also reduce property bloat
[Simon Pamies]
